bugfix: changed wrong fonts

--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;800&display=swap");
 
 * {
     margin: 0;
@@ -7,7 +7,7 @@
     box-sizing: border-box;
 }
 html {
-    font-family: "Quicksand", sans-serif;
+    font-family: "Nunito", sans-serif;
 }
 
 main {
